@@ -89,28 +89,28 @@ class OpenPageCompileTest extends SourceCompileTestBase {
     void filterModel() {
         Page page = compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageSimplePage.page.xml")
                 .get(new PageContext("testOpenPageSimplePage"));
-        PageContext context = (PageContext) route("/page/action1", Page.class);
+        PageContext context = (PageContext) route("/page/action1/", Page.class);
         SimplePage openPage = (SimplePage) read().compile().get(context);
 
         assertThat(openPage.getBreadcrumb().size(), is(2));
-        assertThat(openPage.getBreadcrumb().get(0).getLabel(), is("first"));
+        assertThat(openPage.getBreadcrumb().getFirst().getLabel(), is("first"));
         assertThat(openPage.getBreadcrumb().get(1).getLabel(), is("second"));
 
-        InvokeAction submit = (InvokeAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().get(0);
+        InvokeAction submit = (InvokeAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().getFirst();
         InvokeActionPayload submitPayload = submit.getPayload();
-        assertThat(submitPayload.getDataProvider().getUrl(), is("n2o/data/page/action1/multi1"));
+        assertThat(submitPayload.getDataProvider().getUrl(), is("n2o/data/page/action1/multi1/"));
         assertThat(submitPayload.getDataProvider().getMethod(), is(RequestMethodEnum.POST));
         assertThat(submitPayload.getModel(), is(ReduxModelEnum.RESOLVE));
         assertThat(submitPayload.getDatasource(), is("page_action1_w1"));
         RefreshAction refresh = (RefreshAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().get(1);
         assertThat(((RefreshPayload) refresh.getPayload()).getDatasource(), is("page_test"));
         LinkAction redirect = (LinkAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().get(2);
-        assertThat(redirect.getUrl(), is("/page"));
-        ActionContext submitContext = (ActionContext) route("/page/action1/multi1", CompiledObject.class);
+        assertThat(redirect.getUrl(), is("/page/"));
+        ActionContext submitContext = (ActionContext) route("/page/action1/multi1/", CompiledObject.class);
         assertThat(submitContext.getRedirect(), nullValue());
 
         LinkActionImpl close = (LinkActionImpl) openPage.getToolbar().getButton("close").getAction();
-        assertThat(close.getUrl(), is("/page"));
+        assertThat(close.getUrl(), is("/page/"));
         assertThat(close.getTarget(), is(TargetEnum.APPLICATION));
     }
 
@@ -124,20 +124,20 @@ class OpenPageCompileTest extends SourceCompileTestBase {
         assertThat(action.getPathMapping().get("page_test_id").getValue(), is("`id`"));
         assertThat(action.getQueryMapping().size(), is(0));
 
-        PageContext context = (PageContext) route("/page/123/action2", Page.class);
+        PageContext context = (PageContext) route("/page/123/action2/", Page.class);
         assertThat(context.getPreFilters().size(), is(1));
-        assertThat(context.getPreFilters().get(0).getRefPageId(), is("page"));
-        assertThat(context.getPreFilters().get(0).getDatasourceId(), is("test"));
-        assertThat(context.getPreFilters().get(0).getModel(), is(ReduxModelEnum.RESOLVE));
-        assertThat(context.getPreFilters().get(0).getParam(), is("page_test_id"));
-        assertThat(context.getPreFilters().get(0).getType(), is(FilterTypeEnum.EQ));
+        assertThat(context.getPreFilters().getFirst().getRefPageId(), is("page"));
+        assertThat(context.getPreFilters().getFirst().getDatasourceId(), is("test"));
+        assertThat(context.getPreFilters().getFirst().getModel(), is(ReduxModelEnum.RESOLVE));
+        assertThat(context.getPreFilters().getFirst().getParam(), is("page_test_id"));
+        assertThat(context.getPreFilters().getFirst().getType(), is(FilterTypeEnum.EQ));
         assertThat(context.getParentModelLinks().get(1).getFieldId(), is("id"));
         assertThat(context.getParentModelLinks().get(1).getDatasource(), is("page_test"));
         assertThat(context.getParentModelLinks().get(1).getSubModelQuery(), notNullValue());
         assertThat(context.getParentModelLinks().get(1).getSubModelQuery().getQueryId(), is("testShowModal"));
-        assertThat(context.getParentModelLinks().get(0).getFieldId(), is("id"));
-        assertThat(context.getParentModelLinks().get(0).getDatasource(), is("page_test"));
-        assertThat(context.getParentModelLinks().get(0).getSubModelQuery(), nullValue());
+        assertThat(context.getParentModelLinks().getFirst().getFieldId(), is("id"));
+        assertThat(context.getParentModelLinks().getFirst().getDatasource(), is("page_test"));
+        assertThat(context.getParentModelLinks().getFirst().getSubModelQuery(), nullValue());
 
         resolveModelOpenPage(context);
     }
@@ -146,29 +146,29 @@ class OpenPageCompileTest extends SourceCompileTestBase {
         SimplePage openPage = (SimplePage) read().compile().get(context);
         assertThat(openPage.getId(), is("page_action2"));
         assertThat(openPage.getBreadcrumb().size(), is(2));
-        assertThat(openPage.getBreadcrumb().get(0).getLabel(), is("first"));
+        assertThat(openPage.getBreadcrumb().getFirst().getLabel(), is("first"));
         assertThat(openPage.getBreadcrumb().get(1).getLabel(), is("second"));
 
         ClientDataProvider provider = ((StandardDatasource) openPage.getDatasources().get(openPage.getWidget().getDatasource())).getProvider();
         assertThat(provider.getPathMapping().get("page_test_id").getLink(), is("models.resolve['page_test']"));
         assertThat(provider.getPathMapping().get("page_test_id").getValue(), is("`id`"));
 
-        InvokeAction submit = (InvokeAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().get(0);
+        InvokeAction submit = (InvokeAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().getFirst();
         InvokeActionPayload submitPayload = submit.getPayload();
-        assertThat(submitPayload.getDataProvider().getUrl(), is("n2o/data/page/:page_test_id/action2/multi1"));
+        assertThat(submitPayload.getDataProvider().getUrl(), is("n2o/data/page/:page_test_id/action2/multi1/"));
         assertThat(submitPayload.getDataProvider().getMethod(), is(RequestMethodEnum.POST));
         assertThat(submitPayload.getModel(), is(ReduxModelEnum.RESOLVE));
         assertThat(submitPayload.getDatasource(), is("page_action2_main"));
         RefreshAction refresh = (RefreshAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().get(1);
         assertThat(((RefreshPayload) refresh.getPayload()).getDatasource(), is("page_test"));
         LinkAction redirect = (LinkAction) ((MultiAction) openPage.getToolbar().getButton("submit").getAction()).getPayload().getActions().get(2);
-        assertThat(redirect.getUrl(), is("/page"));
+        assertThat(redirect.getUrl(), is("/page/"));
 
-        ActionContext submitContext = (ActionContext) route("/page/123/action2/multi1", CompiledObject.class);
+        ActionContext submitContext = (ActionContext) route("/page/123/action2/multi1/", CompiledObject.class);
         assertThat(submitContext.getRedirect(), nullValue());
 
         LinkActionImpl close = (LinkActionImpl) openPage.getToolbar().getButton("close").getAction();
-        assertThat(close.getUrl(), is("/page"));
+        assertThat(close.getUrl(), is("/page/"));
         assertThat(close.getTarget(), is(TargetEnum.APPLICATION));
     }
 
@@ -176,49 +176,49 @@ class OpenPageCompileTest extends SourceCompileTestBase {
     void breadcrumb() {
         // проверка breadcrumb при открытии open-page из таблицы
         DataSet data = new DataSet().add("parent_id", 123);
-        PageContext context = new PageContext("testOpenPageSimplePage", "/page/:parent_id/view");
-        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id")));
+        PageContext context = new PageContext("testOpenPageSimplePage", "/page/:parent_id/view/");
+        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id/")));
         Page page = compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageSimplePage.page.xml")
                 .bind().get(context, data);
-        assertThat(page.getRoutes().getSet().contains("/page/:parent_id/view"), is(true));
+        assertThat(page.getRoutes().getSet().contains("/page/:parent_id/view/"), is(true));
 
-        Page createPage = routeAndGet("/page/123/view/action1", Page.class);
-        checkPage(createPage, "/page/:parent_id/view/action1", "/page/123/view");
+        Page createPage = routeAndGet("/page/123/view/action1/", Page.class);
+        checkPage(createPage, "/page/:parent_id/view/action1/", "/page/123/view/");
 
-        Page updatePage = routeAndGet("/page/123/view/456/action2", Page.class);
-        checkPage(updatePage, "/page/:parent_id/view/:page_test_id/action2", "/page/123/view");
+        Page updatePage = routeAndGet("/page/123/view/456/action2/", Page.class);
+        checkPage(updatePage, "/page/:parent_id/view/:page_test_id/action2/", "/page/123/view/");
 
         HashMap<String, String[]> params = new HashMap<>();
         data.put("name", "ivan");
         data.put("secondName", "ivanov");
-        Page masterDetailPage = routeAndGet("/page/123/view/456/masterDetail", Page.class, params);
-        checkPage(masterDetailPage, "/page/:parent_id/view/:page_test_id/masterDetail", "/page/123/view");
+        Page masterDetailPage = routeAndGet("/page/123/view/456/masterDetail/", Page.class, params);
+        checkPage(masterDetailPage, "/page/:parent_id/view/:page_test_id/masterDetail/", "/page/123/view/");
 
-        Page level3Page = routeAndGet("/page/123/view/456/masterDetail/level3", Page.class, params);
+        Page level3Page = routeAndGet("/page/123/view/456/masterDetail/level3/", Page.class, params);
         assertThat(level3Page.getBreadcrumb().size(), is(4));
-        assertThat(level3Page.getBreadcrumb().get(0).getLabel(), is("parent"));
-        assertThat(level3Page.getBreadcrumb().get(0).getPath(), is("/page/123"));
+        assertThat(level3Page.getBreadcrumb().getFirst().getLabel(), is("parent"));
+        assertThat(level3Page.getBreadcrumb().getFirst().getPath(), is("/page/123/"));
         assertThat(level3Page.getBreadcrumb().get(1).getLabel(), is("first"));
-        assertThat(level3Page.getBreadcrumb().get(1).getPath(), is("/page/123/view"));
+        assertThat(level3Page.getBreadcrumb().get(1).getPath(), is("/page/123/view/"));
         assertThat(level3Page.getBreadcrumb().get(2).getLabel(), is("second"));
-        assertThat(level3Page.getBreadcrumb().get(2).getPath(), is("/page/123/view/456/masterDetail?name=:name&surname=:surname&secondName=test"));
+        assertThat(level3Page.getBreadcrumb().get(2).getPath(), is("/page/123/view/456/masterDetail/?name=:name&surname=:surname&secondName=test"));
 
         // проверка breadcrumb при открытии open-page не из таблицы, а другого виджета
         // при этом в parentId не должны сохраняться id выбранных записей
         context = new PageContext("testOpenPageSimplePage2", "/page/:parent_id/view2");
-        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id")));
+        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id/")));
         Page page2 = compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageSimplePage2.page.xml")
                 .bind().get(context, data);
-        assertThat(page2.getRoutes().getSet().contains("/page/:parent_id/view2"), is(true));
-        updatePage = routeAndGet("/page/123/view2/456/action2", Page.class);
-        checkPage(updatePage, "/page/:parent_id/view2/:page_test_id/action2", "/page/123/view2");
+        assertThat(page2.getRoutes().getSet().contains("/page/:parent_id/view2/"), is(true));
+        updatePage = routeAndGet("/page/123/view2/456/action2/", Page.class);
+        checkPage(updatePage, "/page/:parent_id/view2/:page_test_id/action2/", "/page/123/view2/");
     }
 
     private static void checkPage(Page masterDetailPage, String o, String path) {
         assertThat(masterDetailPage.getRoutes().getSet().contains(o), is(true));
         assertThat(masterDetailPage.getBreadcrumb().size(), is(3));
-        assertThat(masterDetailPage.getBreadcrumb().get(0).getLabel(), is("parent"));
-        assertThat(masterDetailPage.getBreadcrumb().get(0).getPath(), is("/page/123"));
+        assertThat(masterDetailPage.getBreadcrumb().getFirst().getLabel(), is("parent"));
+        assertThat(masterDetailPage.getBreadcrumb().getFirst().getPath(), is("/page/123/"));
         assertThat(masterDetailPage.getBreadcrumb().get(1).getLabel(), is("first"));
         assertThat(masterDetailPage.getBreadcrumb().get(1).getPath(), is(path));
         assertThat(masterDetailPage.getBreadcrumb().get(2).getLabel(), is("second"));
@@ -230,43 +230,43 @@ class OpenPageCompileTest extends SourceCompileTestBase {
         // проверка breadcrumb при открытии open-page из таблицы
         DataSet data = new DataSet().add("parent_id", 123);
         PageContext context = new PageContext("testOpenPageWithRefWidget", "/page/:parent_id/view");
-        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id")));
+        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id/")));
         Page page = compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageWithRefWidget.page.xml")
                 .bind().get(context, data);
-        assertThat(page.getRoutes().getSet().contains("/page/:parent_id/view"), is(true));
+        assertThat(page.getRoutes().getSet().contains("/page/:parent_id/view/"), is(true));
 
-        Page createPage = routeAndGet("/page/123/view/action1", Page.class);
-        checkPage(createPage, "/page/:parent_id/view/action1", "/page/123/view");
+        Page createPage = routeAndGet("/page/123/view/action1/", Page.class);
+        checkPage(createPage, "/page/:parent_id/view/action1/", "/page/123/view/");
 
-        Page updatePage = routeAndGet("/page/123/view/456/action2", Page.class);
-        checkPage(updatePage, "/page/:parent_id/view/:page_test_id/action2", "/page/123/view");
+        Page updatePage = routeAndGet("/page/123/view/456/action2/", Page.class);
+        checkPage(updatePage, "/page/:parent_id/view/:page_test_id/action2/", "/page/123/view/");
 
         HashMap<String, String[]> params = new HashMap<>();
         data.put("name", "ivan");
         data.put("secondName", "ivanov");
-        Page masterDetailPage = routeAndGet("/page/123/view/456/masterDetail", Page.class, params);
-        checkPage(masterDetailPage, "/page/:parent_id/view/:page_test_id/masterDetail", "/page/123/view");
+        Page masterDetailPage = routeAndGet("/page/123/view/456/masterDetail/", Page.class, params);
+        checkPage(masterDetailPage, "/page/:parent_id/view/:page_test_id/masterDetail/", "/page/123/view/");
 
-        Page level3Page = routeAndGet("/page/123/view/456/masterDetail/level3", Page.class, params);
+        Page level3Page = routeAndGet("/page/123/view/456/masterDetail/level3/", Page.class, params);
         assertThat(level3Page.getBreadcrumb().size(), is(4));
-        assertThat(level3Page.getBreadcrumb().get(0).getLabel(), is("parent"));
-        assertThat(level3Page.getBreadcrumb().get(0).getPath(), is("/page/123"));
+        assertThat(level3Page.getBreadcrumb().getFirst().getLabel(), is("parent"));
+        assertThat(level3Page.getBreadcrumb().getFirst().getPath(), is("/page/123/"));
         assertThat(level3Page.getBreadcrumb().get(1).getLabel(), is("first"));
-        assertThat(level3Page.getBreadcrumb().get(1).getPath(), is("/page/123/view"));
+        assertThat(level3Page.getBreadcrumb().get(1).getPath(), is("/page/123/view/"));
         assertThat(level3Page.getBreadcrumb().get(2).getLabel(), is("second"));
-        assertThat(level3Page.getBreadcrumb().get(2).getPath(), is("/page/123/view/456/masterDetail?name=:name&surname=:surname&secondName=test"));
+        assertThat(level3Page.getBreadcrumb().get(2).getPath(), is("/page/123/view/456/masterDetail/?name=:name&surname=:surname&secondName=test"));
 
         // проверка breadcrumb при открытии open-page не из таблицы, а другого виджета
         // при этом в parentId не должны сохраняться id выбранных записей
-        context = new PageContext("testOpenPageSimplePage2", "/page/:parent_id/view2");
-        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id")));
+        context = new PageContext("testOpenPageSimplePage2", "/page/:parent_id/view2/");
+        context.setBreadcrumbs(Collections.singletonList(new Breadcrumb("parent", "/page/:parent_id/")));
         Page page2 = compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageSimplePage2.page.xml")
                 .bind().get(context, data);
 
-        assertThat(page2.getRoutes().getSet().contains("/page/:parent_id/view2"), is(true));
+        assertThat(page2.getRoutes().getSet().contains("/page/:parent_id/view2/"), is(true));
 
-        updatePage = routeAndGet("/page/123/view2/456/action2", Page.class);
-        checkPage(updatePage, "/page/:parent_id/view2/:page_test_id/action2", "/page/123/view2");
+        updatePage = routeAndGet("/page/123/view2/456/action2/", Page.class);
+        checkPage(updatePage, "/page/:parent_id/view2/:page_test_id/action2/", "/page/123/view2/");
     }
 
     @Test
@@ -280,21 +280,21 @@ class OpenPageCompileTest extends SourceCompileTestBase {
         assertThat(linkAction.getQueryMapping().get("name").getLink(), is("models.filter['page_test']"));
         assertThat(linkAction.getQueryMapping().get("secondName").getLink(), nullValue());
 
-        PageContext context = (PageContext) route("/page/gender/masterDetail", Page.class);
+        PageContext context = (PageContext) route("/page/gender/masterDetail/", Page.class);
         assertThat(context.getPreFilters().size(), is(1));
-        assertThat(context.getPreFilters().get(0).getRefPageId(), is("page"));
-        assertThat(context.getPreFilters().get(0).getDatasourceId(), is("test"));
-        assertThat(context.getPreFilters().get(0).getModel(), is(ReduxModelEnum.RESOLVE));
-        assertThat(context.getPreFilters().get(0).getValue(), is("{masterId}"));
-        assertThat(context.getPreFilters().get(0).getType(), is(FilterTypeEnum.EQ));
+        assertThat(context.getPreFilters().getFirst().getRefPageId(), is("page"));
+        assertThat(context.getPreFilters().getFirst().getDatasourceId(), is("test"));
+        assertThat(context.getPreFilters().getFirst().getModel(), is(ReduxModelEnum.RESOLVE));
+        assertThat(context.getPreFilters().getFirst().getValue(), is("{masterId}"));
+        assertThat(context.getPreFilters().getFirst().getType(), is(FilterTypeEnum.EQ));
 
         StandardPage openPage = (StandardPage) read().compile().get(context);
         assertThat(openPage.getId(), is("page_masterDetail"));
         assertThat(openPage.getBreadcrumb().size(), is(2));
-        assertThat(openPage.getBreadcrumb().get(0).getLabel(), is("first"));
+        assertThat(openPage.getBreadcrumb().getFirst().getLabel(), is("first"));
         assertThat(openPage.getBreadcrumb().get(1).getLabel(), is("second"));
 
-        Widget openPageWidget = ((Widget) openPage.getRegions().get("single").get(0).getContent().get(0));
+        Widget openPageWidget = ((Widget) openPage.getRegions().get("single").getFirst().getContent().getFirst());
         StandardDatasource ds = (StandardDatasource) openPage.getDatasources().get(openPageWidget.getDatasource());
         assertThat(ds.getProvider().getQueryMapping().get("name").getValue(), is("`name`"));
         assertThat(ds.getProvider().getQueryMapping().get("name").getLink(), is("models.filter['page_test']"));
@@ -308,16 +308,16 @@ class OpenPageCompileTest extends SourceCompileTestBase {
     }
 
     private void checkDetailContext(PageContext context) {
-        PageContext detailContext = (PageContext) route("/page/gender/masterDetail", Page.class);
+        PageContext detailContext = (PageContext) route("/page/gender/masterDetail/", Page.class);
         assertThat(detailContext.getQueryRouteMapping().size(), is(3));
         DataSet data = new DataSet();
         data.put("detailId", 222);
         data.put("name", "testName");
         data.put("surname", "Ivanov");
         StandardPage detailPage = (StandardPage) read().compile().bind().get(detailContext, data);
-        assertThat(detailPage.getRoutes().getSet().contains("/page/:page_test_id/masterDetail"), is(true));
-        assertThat(detailPage.getRoutes().getSet().contains("/page/:page_test_id/masterDetail"), is(true));
-        Widget detailPageWidget = (Widget) detailPage.getRegions().get("single").get(0).getContent().get(0);
+        assertThat(detailPage.getRoutes().getSet().contains("/page/:page_test_id/masterDetail/"), is(true));
+        assertThat(detailPage.getRoutes().getSet().contains("/page/:page_test_id/masterDetail/"), is(true));
+        Widget detailPageWidget = (Widget) detailPage.getRegions().get("single").getFirst().getContent().getFirst();
         Map<String, ModelLink> queryMapping = ((StandardDatasource) detailPage.getDatasources().get(detailPageWidget.getDatasource())).getProvider().getQueryMapping();
         assertThat(queryMapping.get("name").getValue(), is("testName"));
         assertThat(queryMapping.get("surname").getValue(), is("Ivanov"));
@@ -331,31 +331,31 @@ class OpenPageCompileTest extends SourceCompileTestBase {
     void dynamicPage() {
         compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageDynamicPage.page.xml")
                 .get(new PageContext("testOpenPageDynamicPage", "/page"));
-        PageContext context = (PageContext) route("/page/testOpenPageSimplePageAction1/id1", Page.class);
+        PageContext context = (PageContext) route("/page/testOpenPageSimplePageAction1/id1/", Page.class);
         DataSet data = new DataSet();
         data.put("page_test_id", "testOpenPageSimplePageAction1");
         SimplePage openPage = (SimplePage) read().compile().bind().get(context, data);
 
         assertThat(openPage.getBreadcrumb().size(), is(2));
-        assertThat(openPage.getBreadcrumb().get(0).getLabel(), is("first"));
+        assertThat(openPage.getBreadcrumb().getFirst().getLabel(), is("first"));
         assertThat(openPage.getBreadcrumb().get(1).getLabel(), is("second"));
 
         assertThat(openPage.getWidget().getId(), is("page_testOpenPageSimplePageAction1_id1_w1"));
-        assertThat(openPage.getRoutes().getSet().iterator().next(), is("/page/testOpenPageSimplePageAction1/id1"));
+        assertThat(openPage.getRoutes().getSet().iterator().next(), is("/page/testOpenPageSimplePageAction1/id1/"));
         assertThat(openPage.getWidget(), instanceOf(Form.class));
 
-        context = (PageContext) route("/page/testOpenPageSimplePageAction2/id1", Page.class);
+        context = (PageContext) route("/page/testOpenPageSimplePageAction2/id1/", Page.class);
         data = new DataSet();
         data.put("page_test_id", "testOpenPageSimplePageAction2");
         openPage = (SimplePage) read().compile().bind().get(context, data);
 
         assertThat(openPage.getBreadcrumb().size(), is(2));
-        assertThat(openPage.getBreadcrumb().get(0).getLabel(), is("first"));
+        assertThat(openPage.getBreadcrumb().getFirst().getLabel(), is("first"));
         assertThat(openPage.getBreadcrumb().get(1).getLabel(), is("second2"));
 
         assertThat(openPage.getWidget().getId(), is("page_testOpenPageSimplePageAction2_id1_main"));
 
-        assertThat(openPage.getRoutes().getSet().iterator().next(), is("/page/testOpenPageSimplePageAction2/id1"));
+        assertThat(openPage.getRoutes().getSet().iterator().next(), is("/page/testOpenPageSimplePageAction2/id1/"));
 
         assertThat(openPage.getWidget(), instanceOf(Form.class));
     }
@@ -367,17 +367,17 @@ class OpenPageCompileTest extends SourceCompileTestBase {
                         "net/n2oapp/framework/config/metadata/compile/action/testOpenPageMasterParam.page.xml");
 
         Page p1 = pipeline.get(new PageContext("testMasterParam", "/page"));
-        assertThat(p1.getRoutes().getSet().contains("/page"), is(true));
+        assertThat(p1.getRoutes().getSet().contains("/page/"), is(true));
 
         StandardPage p2 = (StandardPage) pipeline.get(new PageContext("testOpenPageMasterParam"));
         assertThat(((StandardDatasource) p2.getDatasources().get("testOpenPageMasterParam_form")).getProvider().getQueryMapping().size(), is(0));
-        assertThat(((StandardDatasource) p2.getDatasources().get("testOpenPageMasterParam_form")).getProvider().getUrl(), is("n2o/data/testOpenPageMasterParam"));
+        assertThat(((StandardDatasource) p2.getDatasources().get("testOpenPageMasterParam_form")).getProvider().getUrl(), is("n2o/data/testOpenPageMasterParam/"));
         assertThat(((StandardDatasource) p2.getDatasources().get("testOpenPageMasterParam_modalDetail")).getProvider().getQueryMapping().size(), is(1));
-        assertThat(((StandardDatasource) p2.getDatasources().get("testOpenPageMasterParam_modalDetail")).getProvider().getUrl(), is("n2o/data/testOpenPageMasterParam/detail2"));
-        assertThat(p2.getRoutes().getSet().contains("/testOpenPageMasterParam"), is(true));
+        assertThat(((StandardDatasource) p2.getDatasources().get("testOpenPageMasterParam_modalDetail")).getProvider().getUrl(), is("n2o/data/testOpenPageMasterParam/detail2/"));
+        assertThat(p2.getRoutes().getSet().contains("/testOpenPageMasterParam/"), is(true));
 
-        ShowModal showModal = (ShowModal) ((Form) p2.getRegions().get("single").get(0).getContent().get(0)).getToolbar().getButton("byName").getAction();
-        assertThat(showModal.getPayload().getPageUrl(), is("/testOpenPageMasterParam/byName"));
+        ShowModal showModal = (ShowModal) ((Form) p2.getRegions().get("single").getFirst().getContent().getFirst()).getToolbar().getButton("byName").getAction();
+        assertThat(showModal.getPayload().getPageUrl(), is("/testOpenPageMasterParam/byName/"));
         Map<String, ModelLink> pathMapping = showModal.getPayload().getPathMapping();
         Map<String, ModelLink> queryMapping = showModal.getPayload().getQueryMapping();
 
@@ -389,7 +389,7 @@ class OpenPageCompileTest extends SourceCompileTestBase {
     void testDefaultParam() {
         compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageSimplePage.page.xml")
                 .get(new PageContext("testOpenPageSimplePage", "/page"));
-        PageContext context = (PageContext) route("/page/defaultValue", Page.class);
+        PageContext context = (PageContext) route("/page/defaultValue/", Page.class);
         SimplePage openPage = (SimplePage) read().compile().get(context);
         Map<String, PageRoutes.Query> queryMapping = openPage.getRoutes().getQueryMapping();
         assertThat(queryMapping.size(), is(4)); //у 4 полей на странице testDefaultValue есть param, они добавились в page routes
@@ -432,15 +432,15 @@ class OpenPageCompileTest extends SourceCompileTestBase {
                 .getValue()).getValues().get("begin"), is("2019-02-16T00:00:00"));
         assertThat(((DefaultValues) openPage.getModels().get("resolve['page_defaultValue_w1'].gender").getValue()).getValues().get("id"), is(1));
 
-        context = (PageContext) route("/page/defaultValueQuery", Page.class);
+        context = (PageContext) route("/page/defaultValueQuery/", Page.class);
         openPage = (SimplePage) read().compile().get(context);
         queryMapping = openPage.getRoutes().getQueryMapping();
         assertThat(queryMapping.size(), is(4));//у 4 полей на странице testDefaultValue есть param, они добавились в page routes, даже когда datasource формы в режиме query
 
-        context = (PageContext) route("/page/testPreFilter", Page.class);
+        context = (PageContext) route("/page/testPreFilter/", Page.class);
         openPage = (SimplePage) read().compile().get(context);
         Map<String, ModelLink> queryMapping1 = ((InputSelect) ((StandardField) ((Form) openPage.getWidget()).getComponent()
-                .getFieldsets().get(0).getRows().get(0).getCols().get(0).getFields().get(0)).getControl()).getDataProvider().getQueryMapping();
+                .getFieldsets().getFirst().getRows().getFirst().getCols().getFirst().getFields().getFirst()).getControl()).getDataProvider().getQueryMapping();
         assertThat(queryMapping1.size(), is(1));
         assertThat(queryMapping1.get("id").getValue(), is(1));
     }
@@ -450,12 +450,12 @@ class OpenPageCompileTest extends SourceCompileTestBase {
         StandardPage page = (StandardPage) compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageWithPathParam.page.xml")
                 .get(new PageContext("testOpenPageWithPathParam", "/page"));
 
-        PerformButton btn1 = (PerformButton) ((Widget) page.getRegions().get("single").get(0).getContent().get(0)).getToolbar().getButton("btn1");
+        PerformButton btn1 = (PerformButton) ((Widget) page.getRegions().get("single").getFirst().getContent().getFirst()).getToolbar().getButton("btn1");
         assertThat(((LinkAction) btn1.getAction()).getPathMapping().size(), is(1));
         assertThat(((LinkAction) btn1.getAction()).getPathMapping().get("client_id").getLink(), nullValue());
         assertThat(((LinkAction) btn1.getAction()).getPathMapping().get("client_id").getValue(), is(123));
 
-        PerformButton btn2 = (PerformButton) ((Widget) page.getRegions().get("single").get(0).getContent().get(0)).getToolbar().getButton("btn2");
+        PerformButton btn2 = (PerformButton) ((Widget) page.getRegions().get("single").getFirst().getContent().getFirst()).getToolbar().getButton("btn2");
         assertThat(((LinkAction) btn2.getAction()).getPathMapping().size(), is(1));
         assertThat(((LinkAction) btn2.getAction()).getPathMapping().get("account_id").getLink(), is("models.resolve['page_master']"));
         assertThat(((LinkAction) btn2.getAction()).getPathMapping().get("account_id").getValue(), is("`accountId`"));
@@ -481,22 +481,22 @@ class OpenPageCompileTest extends SourceCompileTestBase {
                 "net/n2oapp/framework/config/metadata/compile/action/testBindOpenPage.query.xml",
                 "net/n2oapp/framework/config/metadata/compile/action/testBindOpenPageShow.page.xml")
                 .get(new PageContext("testBindOpenPage", "/page"));
-        PageContext context = (PageContext) route("/page/show", Page.class);
+        PageContext context = (PageContext) route("/page/show/", Page.class);
         DataSet data = new DataSet();
         data.put("name", "test");
         SimplePage openPage = (SimplePage) read().compile().bind().get(context, data);
         ClientDataProvider provider = ((StandardDatasource) openPage.getDatasources().get(openPage.getWidget().getDatasource())).getProvider();
-        assertThat(provider.getUrl(), is("n2o/data/page/show/w1"));
+        assertThat(provider.getUrl(), is("n2o/data/page/show/w1/"));
         assertThat(provider.getQueryMapping().size(), is(1));
         assertThat(provider.getQueryMapping().get("name").isConst(), is(true));
 
         compile("net/n2oapp/framework/config/metadata/compile/action/testBindOpenPageShow.page.xml",
                 "net/n2oapp/framework/config/metadata/compile/action/testBindOpenPage.query.xml")
                 .get(new PageContext("testBindOpenPageShow", "/testBind"));
-        context = (PageContext) route("/testBind", Page.class);
+        context = (PageContext) route("/testBind/", Page.class);
         openPage = (SimplePage) read().compile().bind().get(context, data);
         provider = ((StandardDatasource) openPage.getDatasources().get(openPage.getWidget().getDatasource())).getProvider();
-        assertThat(provider.getUrl(), is("n2o/data/testBind/w1"));
+        assertThat(provider.getUrl(), is("n2o/data/testBind/w1/"));
         assertThat(provider.getQueryMapping().size(), is(1));
         assertThat(provider.getQueryMapping().get("name").getValue(), is("test"));
     }
@@ -507,12 +507,14 @@ class OpenPageCompileTest extends SourceCompileTestBase {
                 .get(new PageContext("testSimpleOpenPage"));
         Toolbar toolbar = page.getWidget().getToolbar();
         LinkAction link = (LinkAction) toolbar.getButton("id1").getAction();
-        assertThat(link.getUrl(), is("/testSimpleOpenPage/id1"));
+        assertThat(link.getUrl(), is("/testSimpleOpenPage/id1/"));
         assertThat(link.getTarget(), is(TargetEnum.APPLICATION));
+        assertThat(((LinkActionImpl) link).getPayload().getNewWindow(), is(false));
 
         link = (LinkAction) toolbar.getButton("id2").getAction();
-        assertThat(link.getUrl(), is("#/testSimpleOpenPage/view"));
-        assertThat(link.getTarget(), is(TargetEnum.NEW_WINDOW));
+        assertThat(link.getUrl(), is("/testSimpleOpenPage/view/"));
+        assertThat(link.getTarget(), is(TargetEnum.APPLICATION));
+        assertThat(((LinkActionImpl) link).getPayload().getNewWindow(), is(true));
     }
 
     @Test
@@ -524,12 +526,12 @@ class OpenPageCompileTest extends SourceCompileTestBase {
         context.setPathRouteMapping(Collections.singletonMap("id", modelLink));
         Page page = compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageParent.page.xml")
                 .bind().get(context, data);
-        assertThat(page.getRoutes().getSet().contains("/page/:id/view"), is(true));
+        assertThat(page.getRoutes().getSet().contains("/page/:id/view/"), is(true));
 
-        Page openPage = routeAndGet("/page/123/view/open", Page.class);
+        Page openPage = routeAndGet("/page/123/view/open/", Page.class);
         assertThat(openPage.getBreadcrumb().size(), is(3));
-        assertThat(openPage.getBreadcrumb().get(0).getLabel(), is("First"));
-        assertThat(openPage.getBreadcrumb().get(0).getPath(), is("/"));
+        assertThat(openPage.getBreadcrumb().getFirst().getLabel(), is("First"));
+        assertThat(openPage.getBreadcrumb().getFirst().getPath(), is("/"));
         assertThat(openPage.getBreadcrumb().get(1).getLabel(), is("Second"));
         assertThat(openPage.getBreadcrumb().get(1).getPath(), is("/123/page2"));
         assertThat(openPage.getBreadcrumb().get(2).getLabel(), is("Third 123"));
@@ -547,22 +549,22 @@ class OpenPageCompileTest extends SourceCompileTestBase {
         compile("net/n2oapp/framework/config/metadata/compile/action/testOpenPageToolbarAndAction.page.xml")
                 .get(pageContext);
 
-        StandardPage page = (StandardPage) routeAndGet("/p/create", Page.class);
+        StandardPage page = (StandardPage) routeAndGet("/p/create/", Page.class);
         List<Group> toolbar = page.getToolbar().get("bottomCenter");
-        assertThat(toolbar.get(0).getButtons().size(), is(1));
-        assertThat(toolbar.get(0).getButtons().get(0).getLabel(), is("Button in center"));
-        assertThat(toolbar.get(0).getButtons().get(0).getAction(), instanceOf(LinkAction.class));
-        assertThat(((LinkAction) toolbar.get(0).getButtons().get(0).getAction()).getUrl(), is("http://i-novus.ru"));
+        assertThat(toolbar.getFirst().getButtons().size(), is(1));
+        assertThat(toolbar.getFirst().getButtons().getFirst().getLabel(), is("Button in center"));
+        assertThat(toolbar.getFirst().getButtons().getFirst().getAction(), instanceOf(LinkAction.class));
+        assertThat(((LinkAction) toolbar.getFirst().getButtons().getFirst().getAction()).getUrl(), is("http://i-novus.ru"));
 
-        page = (StandardPage) routeAndGet("/p/update", Page.class);
+        page = (StandardPage) routeAndGet("/p/update/", Page.class);
         toolbar = page.getToolbar().get("bottomCenter");
-        assertThat(toolbar.get(0).getButtons().size(), is(1));
-        assertThat(toolbar.get(0).getButtons().get(0).getLabel(), is("Button in center"));
-        assertThat(toolbar.get(0).getButtons().get(0).getAction(), instanceOf(LinkAction.class));
-        assertThat(((LinkAction) toolbar.get(0).getButtons().get(0).getAction()).getUrl(), is("http://i-novus.ru"));
+        assertThat(toolbar.getFirst().getButtons().size(), is(1));
+        assertThat(toolbar.getFirst().getButtons().getFirst().getLabel(), is("Button in center"));
+        assertThat(toolbar.getFirst().getButtons().getFirst().getAction(), instanceOf(LinkAction.class));
+        assertThat(((LinkAction) toolbar.getFirst().getButtons().getFirst().getAction()).getUrl(), is("http://i-novus.ru"));
         toolbar = page.getToolbar().get("bottomRight");
-        assertThat(toolbar.get(0).getButtons().size(), is(1));
-        assertThat(toolbar.get(0).getButtons().get(0).getLabel(), is("Button2"));
-        assertThat(toolbar.get(0).getButtons().get(0).getAction(), instanceOf(ClearAction.class));
+        assertThat(toolbar.getFirst().getButtons().size(), is(1));
+        assertThat(toolbar.getFirst().getButtons().getFirst().getLabel(), is("Button2"));
+        assertThat(toolbar.getFirst().getButtons().getFirst().getAction(), instanceOf(ClearAction.class));
     }
 }
